--- a/bt_boostrap.html
+++ b/bt_boostrap.html
@@ -94,7 +94,7 @@
             font-size: 20px;
         }
         
-        #right_menu input {
+        #right_menu .form-group {
             width: 200px;
             border-radius: 5px;
             border-color: #E6E6E6;
@@ -222,7 +222,7 @@
             border-radius: 0px 7px 7px 0px;
         }
         
-        #Email input {
+        #Email .form-group{
             width: 300px;
             height: 50px;
             margin: 0;
@@ -246,12 +246,12 @@
                 <div>Blog</div>
             </div>
             <div id="logo">
-                <img src="/0_Event promotions/Image 1.png" alt="">
+                <img src="/img/Image 1.png" alt="">
             </div>
             <div id="right_menu">
-                <input type="text" placeholder="Search product">
-                <img src="/0_Event promotions/Button 1.png" alt="">
-                <img src="/0_Event promotions/Avatar 1.png" alt="">
+                <input type="text" placeholder="Search product" class="form-group">
+                <img src="/img/Button 1.png" alt="">
+                <img src="/img/Avatar 1.png" alt="">
             </div>
         </div>
         <div id="Text">
@@ -259,7 +259,7 @@
         </div>
         <div id="Title1">
             <div id="Title_left1">
-                <img src="/0_Event promotions/Image 1 (1).png" alt="">
+                <img src="/img/Image 1 (1).png" alt="">
             </div>
             <div id="Title_right1">
                 <h1 style="font-size: 35px; width: 250px;font-family: Arial, Helvetica, sans-serif; margin-top: 25px;margin-bottom: 0; color: #323842;">Promotion title</h1>
@@ -276,12 +276,12 @@
                 <button type="button" class="btn btn-success">Shop now</button>
             </div>
             <div id="Title_right2">
-                <img src="/0_Event promotions/Image 1 (2).png" alt="">
+                <img src="/img/Image 1 (2).png" alt="">
             </div>
         </div>
         <div id="You">
             <div id="You_left">
-                <img src="/0_Event promotions/Image 1 (3).png" alt="" width="100%">
+                <img src="/img/Image 1 (3).png" alt="" width="100%">
             </div>
             <div id="You_right">
                 <h1 style="font-size: 50px; width: 435px;height: 40px; font-family: Arial, Helvetica, sans-serif; margin-top: 100px;  margin-bottom: 0;margin-right: 100px; color: #323842;">Gift for your skin</h1>
@@ -296,7 +296,9 @@
                 <div style="font-size: 14px; height: 10px; font-family: Arial, Helvetica, sans-serif;height: 15px;margin-top: 30px;">Shop</div>
                 <div style="font-size: 14px; height: 10px; font-family: Arial, Helvetica, sans-serif;height: 15px;margin-top: 30px;">Our story</div>
                 <div style="font-size: 14px; height: 10px; font-family: Arial, Helvetica, sans-serif;height: 15px;margin-top: 30px;">Blog</div>
-                <div style="background-color: #1D2128 ; border: 2px; border-style: solid;border-color: #E6E6E6;width: 130;height: 35px;border-radius: 5px;margin-top: 25px;"><datalist id=""><option value="English"></option></datalist></div>
+                <select style="background-color: #1D2128 ; border: 2px; border-style: solid;border-color: #E6E6E6;width: 130;height: 35px;border-radius: 5px;margin-top: 25px;">
+                    <option value="English">English</option>
+                </select>
             </div>
             <div id="Help">
                 <div style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;height: 15px; ">Help</div>
@@ -315,14 +317,14 @@
                 <div style="font-size: 20px;font-family: Arial, Helvetica, sans-serif;height: 15px; ">Receive new promotions</div>
                 <div style="margin-top: 25px;font-size: 14px; height: 10px; font-family: Arial, Helvetica, sans-serif;height: 15px;">Duis ea tempor commodo amet reprehende </div>
                 <div id="Email">
-                    <input type="email" placeholder="Input your email" style="width: 300px;height: 50px;">
+                    <input type="email" placeholder="Input your email" style="width: 300px;height: 50px;" class="form-group">
                     <button type="button" class="btn btn-success">Subscribe</button>
-                </div>
+                </class=>
                 <div style="margin-top: 35px;">
-                    <img src="/0_Event promotions/Twitter 1.png" alt="" style="margin-right: 5px;">
-                    <img src="/0_Event promotions/Facebook 1.png" alt="" style="margin-right: 5px;">
-                    <img src="/0_Event promotions/LinkedIn 1.png" alt="" style="margin-right: 5px;">
-                    <img src="/0_Event promotions/YouTube 1.png" alt="">
+                    <img src="/img/Twitter 1.png" alt="" style="margin-right: 5px;">
+                    <img src="/img/Facebook 1.png" alt="" style="margin-right: 5px;">
+                    <img src="/img/LinkedIn 1.png" alt="" style="margin-right: 5px;">
+                    <img src="/img/YouTube 1.png" alt="">
                 </div>
                 <div style="margin-top: 35px;margin-left: 45px;">@ 2022 Brand,Inc. * Privacy * Terms * Sitemap</div>
             </div>
